--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,10 @@ crewai==0.10.0
 PyYAML==6.0.2  # langchain-openai will be pulled transitively by crewai
 
 # --- Retrieval & embeddings (FAISS + sentence-transformers) ---
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
-numpy==1.24.3
-huggingface-hub==0.14.1
+faiss-cpu>=1.8.0
+sentence-transformers>=2.3.0
+numpy>=1.26.0
+huggingface-hub>=0.20.0
 
 # --- Gemini STT engine + VAD ---
 google-genai>=0.3.0
